<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".AddObjectActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_lastname"/>


    <EditText
        android:id="@+id/object_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RadioGroup
        android:id="@+id/object_type_RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/object_heater_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_heater" />
        <RadioButton
            android:id="@+id/object_window_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_window" />

        <RadioButton
            android:id="@+id/object_plant_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_plant" />

        <RadioButton
            android:id="@+id/object_light_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/object_light" />

    </RadioGroup>



    <Button
        android:id="@+id/object_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/object_add" />



</LinearLayout>